--- a/metadata.yaml
+++ b/metadata.yaml
@@ -32,5 +32,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PS'
 - !lcsh 'Fiction'
+- GITenberg
 title: Our Next-Door Neighbors
 url: http://www.gutenberg.org/ebooks/30075
